--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     </header>
     <main class="section__page__main">
-        <div class="text-white bg-dark section__page__main__intro"><video class="d-block" loop="" autoplay="" preload="auto" muted="" playsinline=""><source src="https://altab.cf/www/Fotolia_223785980_V_HD1080.mp4" type="video/mp4"></video>
+        <div class="text-white bg-dark section__page__main__intro"><video class="d-block" loop="" autoplay="" preload="auto" muted="" playsinline=""><source src="./content/Fotolia_223785980_V_HD1080.mp4" type="video/mp4"></video>
             <div class="d-flex justify-content-center align-items-center py--75" style="background-color: rgba(0,0,0,0.5);">
                 <div class="container">
                     <div class="row">
